fixing the email on mobile

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 @import url(reset.css);
 
-@font-face {
+/*@font-face {
     font-family: 'Apple Garamond';
     src: url('../AppleGaramond.eot');
     src: url('../AppleGaramond.eot?#iefix') format('embedded-opentype'),
@@ -9,13 +9,143 @@
     font-weight: normal;
     font-style: normal;
     font-display: swap;
-}
+}*/
+
+
+.shake-little {
+  display: inherit;
+  transform-origin: center center; }
+
+.shake-freeze,
+.shake-constant.shake-constant--hover:hover,
+.shake-trigger:hover .shake-constant.shake-constant--hover {
+  animation-play-state: paused; }
+
+.shake-freeze:hover,
+.shake-trigger:hover .shake-freeze, .shake-little:hover,
+.shake-trigger:hover .shake-little {
+  animation-play-state: running; }
+
+@keyframes shake-little {
+  2% {
+    transform: translate(0px, 1px) rotate(0.5deg); }
+  4% {
+    transform: translate(0px, 1px) rotate(0.5deg); }
+  6% {
+    transform: translate(1px, 1px) rotate(0.5deg); }
+  8% {
+    transform: translate(0px, 0px) rotate(0.5deg); }
+  10% {
+    transform: translate(1px, 0px) rotate(0.5deg); }
+  12% {
+    transform: translate(1px, 1px) rotate(0.5deg); }
+  14% {
+    transform: translate(0px, 0px) rotate(0.5deg); }
+  16% {
+    transform: translate(1px, 0px) rotate(0.5deg); }
+  18% {
+    transform: translate(0px, 1px) rotate(0.5deg); }
+  20% {
+    transform: translate(0px, 1px) rotate(0.5deg); }
+  22% {
+    transform: translate(1px, 1px) rotate(0.5deg); }
+  24% {
+    transform: translate(0px, 1px) rotate(0.5deg); }
+  26% {
+    transform: translate(0px, 0px) rotate(0.5deg); }
+  28% {
+    transform: translate(1px, 0px) rotate(0.5deg); }
+  30% {
+    transform: translate(1px, 0px) rotate(0.5deg); }
+  32% {
+    transform: translate(0px, 1px) rotate(0.5deg); }
+  34% {
+    transform: translate(0px, 1px) rotate(0.5deg); }
+  36% {
+    transform: translate(0px, 0px) rotate(0.5deg); }
+  38% {
+    transform: translate(1px, 1px) rotate(0.5deg); }
+  40% {
+    transform: translate(1px, 0px) rotate(0.5deg); }
+  42% {
+    transform: translate(0px, 1px) rotate(0.5deg); }
+  44% {
+    transform: translate(0px, 1px) rotate(0.5deg); }
+  46% {
+    transform: translate(0px, 0px) rotate(0.5deg); }
+  48% {
+    transform: translate(0px, 1px) rotate(0.5deg); }
+  50% {
+    transform: translate(0px, 1px) rotate(0.5deg); }
+  52% {
+    transform: translate(1px, 1px) rotate(0.5deg); }
+  54% {
+    transform: translate(0px, 0px) rotate(0.5deg); }
+  56% {
+    transform: translate(0px, 0px) rotate(0.5deg); }
+  58% {
+    transform: translate(0px, 0px) rotate(0.5deg); }
+  60% {
+    transform: translate(0px, 1px) rotate(0.5deg); }
+  62% {
+    transform: translate(0px, 0px) rotate(0.5deg); }
+  64% {
+    transform: translate(1px, 0px) rotate(0.5deg); }
+  66% {
+    transform: translate(0px, 1px) rotate(0.5deg); }
+  68% {
+    transform: translate(0px, 0px) rotate(0.5deg); }
+  70% {
+    transform: translate(1px, 1px) rotate(0.5deg); }
+  72% {
+    transform: translate(1px, 0px) rotate(0.5deg); }
+  74% {
+    transform: translate(0px, 1px) rotate(0.5deg); }
+  76% {
+    transform: translate(0px, 1px) rotate(0.5deg); }
+  78% {
+    transform: translate(1px, 0px) rotate(0.5deg); }
+  80% {
+    transform: translate(1px, 0px) rotate(0.5deg); }
+  82% {
+    transform: translate(0px, 0px) rotate(0.5deg); }
+  84% {
+    transform: translate(1px, 0px) rotate(0.5deg); }
+  86% {
+    transform: translate(0px, 0px) rotate(0.5deg); }
+  88% {
+    transform: translate(0px, 0px) rotate(0.5deg); }
+  90% {
+    transform: translate(1px, 1px) rotate(0.5deg); }
+  92% {
+    transform: translate(1px, 1px) rotate(0.5deg); }
+  94% {
+    transform: translate(1px, 0px) rotate(0.5deg); }
+  96% {
+    transform: translate(1px, 0px) rotate(0.5deg); }
+  98% {
+    transform: translate(0px, 0px) rotate(0.5deg); }
+  0%, 100% {
+    transform: translate(0, 0) rotate(0); } }
+
+.email:hover{
+	animation-name: shake-little;
+  animation-duration: 100ms;
+  animation-timing-function: ease-in-out;
+  animation-iteration-count: infinite; }
+
+
+
+
+
+@import url('http://fonts.cdnfonts.com/css/apple-garamond');
 
 
 p{
 	font-size: 50px;
 	text-align: left;
 	font-family: 'Apple Garamond';
+	letter-spacing: 0.02em;
 	margin-bottom: 10px;
 }
 
@@ -26,8 +156,29 @@ p{
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	position: relative;
 }
 
+.post{
+	position: absolute;
+	bottom: 10px;
+	text-align: center;
+	margin: 0 auto;
+	font-size: 20px;
+}
+
+.post *{
+	font-family: 'Apple Garamond light' ;
+	font-size: 20px;
+	color: darkgrey;
+	text-decoration: none;
+	display: inline-block;
+
+}
+
+.email{
+	display: inline-block;
+}
 /* 40 x 30 x 20 */
 
 .image{
@@ -42,6 +193,7 @@ p{
 	width: 60vw;
 	background-image: url("../final.png");
 }
+
 
 @media screen and (max-device-width:481px), screen and (max-width:481px){
 	p{
@@ -67,5 +219,31 @@ p{
 		/*transform: rotate(90deg);*/
 		/*width: 100%;*/
 	}
+	.post *{
+		font-size: 42px;
+		display: inline;
+		line-height: 50px;
+	}
+
+	.email{
+		display: inline;
+	}
+	.post {
+		padding: 0 50px;
+
+	}
+
+/*	.post{
+		display: flex;
+		justify-content: center;
+		flex-direction: column;
+		margin: 0 20px;
+	}
+	.email{
+		animation-name: shake-little;
+	  animation-duration: 100ms;
+	  animation-timing-function: ease-in-out;
+	  animation-iteration-count: infinite;
+	   }*/
 }
 
